force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/Plant_Program__c.object-meta.xml
<CustomObject>
    <description>Plant specific programs</description>
    <label>Plant Program</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>