force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Auth_Sector1__c.field-meta.xml
<CustomField>
    <fullName>Auth_Sector1__c</fullName>
    <formula>TEXT( Plant_Shop__r.Auth_Sector__c )</formula>
    <label>Auth Sector</label>
    <type>Text</type>
</CustomField>