force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Include__c.field-meta.xml
<CustomField>
    <fullName>Include__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>