force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Plant_Line__c.field-meta.xml
<CustomField>
    <fullName>Plant_Line__c</fullName>
    <label>Plant Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>