force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Plant_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Program_Name__c</fullName>
    <label>Plant Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>