force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Plant_Shop__c.field-meta.xml
<CustomField>
    <fullName>Plant_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Shop</label>
    <referenceTo>Plant_Shop__c</referenceTo>
    <relationshipLabel>Plant Programs</relationshipLabel>
    <relationshipName>Plant_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>