force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>Plant_Shop__r.Product_Type__c</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>