force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GenV</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>Ultium</fullName>
            </value>
            <value>
                <fullName>Mid Size SUV</fullName>
            </value>
            <value>
                <fullName>Polymers</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>BEV+</fullName>
            </value>
            <value>
                <fullName>eLCV</fullName>
            </value>
            <value>
                <fullName>Gen2</fullName>
            </value>
            <value>
                <fullName>PowerCube</fullName>
            </value>
            <value>
                <fullName>TBO Module</fullName>
            </value>
            <value>
                <fullName>TBO Pack</fullName>
            </value>
            <value>
                <fullName>8sp</fullName>
            </value>
            <value>
                <fullName>DMAX Diesel</fullName>
            </value>
            <value>
                <fullName>Gen V</fullName>
            </value>
            <value>
                <fullName>Gen V Comp Assist</fullName>
            </value>
            <value>
                <fullName>Gen 6</fullName>
            </value>
            <value>
                <fullName>HFV6</fullName>
            </value>
            <value>
                <fullName>LT6</fullName>
            </value>
            <value>
                <fullName>SGE</fullName>
            </value>
            <value>
                <fullName>BET</fullName>
            </value>
            <value>
                <fullName>BET/BEV</fullName>
            </value>
            <value>
                <fullName>BEV</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Enclosures</fullName>
            </value>
            <value>
                <fullName>Full Size Truck/SUV</fullName>
            </value>
            <value>
                <fullName>Mid Size Truck</fullName>
            </value>
            <value>
                <fullName>Mid Size Truck / Van</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>