force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Program_Product_Index__c.field-meta.xml
<CustomField>
    <fullName>Program_Product_Index__c</fullName>
    <label>Program/Product Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Product_Index</valueSetName>
    </valueSet>
</CustomField>