force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Shifts_Def__c.field-meta.xml
<CustomField>
    <fullName>Shifts_Def__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shifts Def</label>
    <referenceTo>Operation_Plan__c</referenceTo>
    <relationshipLabel>Plant Programs</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>