force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <formula>TEXT(Plant_Shop__r.Shop__c )</formula>
    <label>Shop</label>
    <type>Text</type>
</CustomField>