force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan_of_Record</fullName>
                <default>true</default>
                <label>Plan of Record</label>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>