force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/recordTypes/Plan_of_Record.recordType-meta.xml
<RecordType>
    <fullName>Plan_of_Record</fullName>
    <active>true</active>
    <label>Plan of Record</label>
</RecordType>