force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auth_Sector1__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Shop__c</columns>
    <columns>Program_Product_Index__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Include__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>